--- a/tests/QuikGraph.Graphviz.Tests/QuikGraph.Graphviz.Tests.csproj
+++ b/tests/QuikGraph.Graphviz.Tests/QuikGraph.Graphviz.Tests.csproj
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net35;net40;net45;net451;net452;net46;net461;net462;net47;net471;net472;netcoreapp2.1</TargetFrameworks>
+    <!--<TargetFrameworks>net35;net40;net45;net451;net452;net46;net461;net462;net47;net471;net472;netcoreapp2.1</TargetFrameworks>-->
+    <TargetFrameworks>net45</TargetFrameworks>
 
     <Title>QuikGraph.Graphviz.Tests</Title>
 
