--- a/tests/QuikGraph.MSAGL.Tests/QuikGraph.MSAGL.Tests.csproj
+++ b/tests/QuikGraph.MSAGL.Tests/QuikGraph.MSAGL.Tests.csproj
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net461;net462;net47;net471;net472;netcoreapp2.1</TargetFrameworks>
+    <!--<TargetFrameworks>net461;net462;net47;net471;net472;netcoreapp2.1</TargetFrameworks>-->
+    <TargetFrameworks>net461</TargetFrameworks>
 
     <Title>QuikGraph.MSAGL.Tests</Title>
 
