[ci skip] Tests

--- a/src/QuikGraph.Graphviz/QuikGraph.Graphviz.csproj
+++ b/src/QuikGraph.Graphviz/QuikGraph.Graphviz.csproj
@@ -63,4 +63,9 @@ New:
   <ItemGroup Condition="!$(UseQuikGraphCoreNuget)">
     <ProjectReference Include="..\QuikGraph\QuikGraph.csproj" />
   </ItemGroup>
+  <ItemGroup>
+
+      <Compile Include="..\..\src\QuikGraph.CommonInternals\Compatibility\StringUtils.cs" Link="StringUtils.cs" />
+      <Compile Include="..\..\src\QuikGraph.CommonInternals\MathUtils.cs" Link="MathUtils.cs" />
+  </ItemGroup>
 </Project>
