--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -25,7 +25,7 @@
 
   <!-- Dependencies -->
   <!-- Shared Projects -->
-  <Import Project="QuikGraph.CommonInternals\QuikGraph.CommonInternals.projitems" Label="Shared" />
+  <!-- <Import Project="QuikGraph.CommonInternals\QuikGraph.CommonInternals.projitems" Label="Shared" /> -->
 
   <!-- Source Link -->
   <ItemGroup>
