--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -23,5 +23,5 @@
   </ItemGroup>
 
   <!-- Shared Projects -->
-  <Import Project="QuikGraph.Tests.CommonInternals\QuikGraph.Tests.CommonInternals.projitems" Label="Shared" />
+  <!-- <Import Project="QuikGraph.Tests.CommonInternals\QuikGraph.Tests.CommonInternals.projitems" Label="Shared" /> -->
 </Project>
