--- a/tests/QuikGraph.Data.Tests/QuikGraph.Data.Tests.csproj
+++ b/tests/QuikGraph.Data.Tests/QuikGraph.Data.Tests.csproj
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net35;net40;net45;net451;net452;net46;net461;net462;net47;net471;net472;netcoreapp2.1</TargetFrameworks>
+    <TargetFrameworks>net472</TargetFrameworks>
+    <!--<TargetFrameworks>net35;net40;net45;net451;net452;net46;net461;net462;net47;net471;net472;netcoreapp2.1</TargetFrameworks>-->
 
     <Title>QuikGraph.Data.Tests</Title>
 
@@ -53,7 +54,7 @@
 
   <!-- Dependencies -->
   <!-- Shared Projects -->
-  <Import Project="..\..\src\QuikGraph.CommonInternals\QuikGraph.CommonInternals.projitems" Label="Shared" />
+  <!--<Import Project="..\..\src\QuikGraph.CommonInternals\QuikGraph.CommonInternals.projitems" Label="Shared" />-->
 
   <!-- Projects -->
   <!-- QuikGraph.Data reference -->
@@ -62,5 +63,8 @@
   </ItemGroup>
   <ItemGroup Condition="!$(UseQuikGraphDataNuget)">
     <ProjectReference Include="..\..\src\QuikGraph.Data\QuikGraph.Data.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QuikGraphTestsCommon\QuikGraphTestsCommon.csproj" />
   </ItemGroup>
 </Project>
