--- a/tests/QuikGraph.Petri.Tests/QuikGraph.Petri.Tests.csproj
+++ b/tests/QuikGraph.Petri.Tests/QuikGraph.Petri.Tests.csproj
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net35;net40;net45;net451;net452;net46;net461;net462;net47;net471;net472;netcoreapp2.1</TargetFrameworks>
+      <TargetFrameworks>net472</TargetFrameworks>
+
+    <!--<TargetFrameworks>net35;net40;net45;net451;net452;net46;net461;net462;net47;net471;net472;netcoreapp2.1</TargetFrameworks>-->
 
     <Title>QuikGraph.Petri.Tests</Title>
 
@@ -64,5 +66,8 @@
   </ItemGroup>
   <ItemGroup Condition="!$(UseQuikGraphPetriNuget)">
     <ProjectReference Include="..\..\src\QuikGraph.Petri\QuikGraph.Petri.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QuikGraphTestsCommon\QuikGraphTestsCommon.csproj" />
   </ItemGroup>
 </Project>
