--- a/tests/QuikGraph.Tests/QuikGraph.Tests.csproj
+++ b/tests/QuikGraph.Tests/QuikGraph.Tests.csproj
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net35;net40;net45;net451;net452;net46;net461;net462;net47;net471;net472;netcoreapp2.1</TargetFrameworks>
+      <TargetFrameworks>net472</TargetFrameworks>
+
+    <!--<TargetFrameworks>net35;net40;net45;net451;net452;net46;net461;net462;net47;net471;net472;netcoreapp2.1</TargetFrameworks>-->
 
     <Title>QuikGraph.Tests</Title>
 
@@ -62,7 +64,7 @@
 
   <!-- Dependencies -->
   <!-- Shared Projects -->
-  <Import Project="..\QuikGraph.Serialization.Tests.CommonInternals\QuikGraph.Serialization.Tests.CommonInternals.projitems" Label="Shared" />
+  <!--<Import Project="..\QuikGraph.Serialization.Tests.CommonInternals\QuikGraph.Serialization.Tests.CommonInternals.projitems" Label="Shared" />-->
 
   <!-- QuikGraph reference -->
   <ItemGroup Condition="$(UseQuikGraphCoreNuget)">
@@ -77,5 +79,14 @@
   </ItemGroup>
   <ItemGroup Condition="!$(UseQuikGraphSerializationNuget)">
     <ProjectReference Include="..\..\src\QuikGraph.Serialization\QuikGraph.Serialization.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+      <!--<Compile Include="..\QuikGraph.CommonInternals\DisposableHelpers.cs" Link="DisposableHelpers.cs" />-->
+      <Compile Include="..\..\src\QuikGraph.CommonInternals\Compatibility\StringUtils.cs" Link="StringUtils.cs" />
+      <!--<Compile Include="..\..\src\QuikGraph.CommonInternals\Externs\JetBrains.Annotations.cs" Link="JetBrains.Annotations.cs" />-->
+      <!--<Compile Include="..\QuikGraph.CommonInternals\Signing\PublicKey.cs" Link="PublicKey.cs" />-->
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QuikGraphTestsCommon\QuikGraphTestsCommon.csproj" />
   </ItemGroup>
 </Project>
