--- a/src/QuikGraph.Data/QuikGraph.Data.csproj
+++ b/src/QuikGraph.Data/QuikGraph.Data.csproj
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net35;netstandard2.0</TargetFrameworks>
+    <!--<TargetFrameworks>net35;netstandard2.0</TargetFrameworks>-->
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
 
     <GeneratePackageOnBuild>$(Generate_QuikGraph_Data)</GeneratePackageOnBuild>
 
