--- a/src/QuikGraph.Petri/QuikGraph.Petri.csproj
+++ b/src/QuikGraph.Petri/QuikGraph.Petri.csproj
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net35;net40;netstandard1.3;netstandard2.0</TargetFrameworks>
+    <!--<TargetFrameworks>net35;net40;netstandard1.3;netstandard2.0</TargetFrameworks>-->
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
 
     <GeneratePackageOnBuild>$(Generate_QuikGraph_Petri)</GeneratePackageOnBuild>
 
