--- a/src/QuikGraph.Serialization/QuikGraph.Serialization.csproj
+++ b/src/QuikGraph.Serialization/QuikGraph.Serialization.csproj
@@ -35,12 +35,8 @@ Updates:
   </PropertyGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' != 'netstandard1.3'">
-    <EmbeddedResource Include="graphml.dtd" />
-    <EmbeddedResource Include="graphml.xsd" />
-    <EmbeddedResource Include="graphml-structure.xsd" />
-    <EmbeddedResource Include="graphml-attributes.xsd" />
-    <EmbeddedResource Include="graphml-parseinfo.xsd" />
-    <EmbeddedResource Include="xlink.xsd" />
+    <EmbeddedResource Include="**\*.dtd" />
+    <EmbeddedResource Include="**\*.xsd" />
   </ItemGroup>
 
   <!-- Targets defines -->
