Write release notes for QuikGraph modules.

--- a/src/QuikGraph.Data/QuikGraph.Data.csproj
+++ b/src/QuikGraph.Data/QuikGraph.Data.csproj
@@ -28,9 +28,12 @@ Supports Source Link</Description>
 
     <IsPackable>true</IsPackable>
     <PackageId>QuikGraph.Data</PackageId>
-    <PackageReleaseNotes>➟ Release 2.3.0
+    <PackageReleaseNotes>➟ Release 2.5.0
 Updates:
-- Update package dependencies.</PackageReleaseNotes>
+- Update package dependencies.
+
+Misc:
+- Assembly is CLS compliant (Common Language Specification).</PackageReleaseNotes>
     <PackageTags>QuickGraph QuikGraph Graph Structure Algorithm C# .NET Serialization Data</PackageTags>
   </PropertyGroup>
 
